--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.2",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -70,8 +71,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "~4.7.4",
-    "uuid": "^9.0.0"
+    "typescript": "~4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
